--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "vlucas/phpdotenv": "~2.2",
         "monolog/monolog": "^1.21",
         "league/fractal": "^0.14.0",
-        "spatie/laravel-fractal": "^2.0"
+        "spatie/laravel-fractal": "^2.0",
+        "laravel/socialite": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
