--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "league/fractal": "^0.14.0",
         "spatie/laravel-fractal": "^2.0",
         "laravel/socialite": "^2.0",
-        "tymon/jwt-auth": "^1.0@dev"
+        "tymon/jwt-auth": "^1.0@dev",
+        "barryvdh/laravel-cors": "^0.8.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
