--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "spatie/laravel-fractal": "^2.0",
         "laravel/socialite": "^2.0",
         "tymon/jwt-auth": "^1.0@dev",
-        "barryvdh/laravel-cors": "^0.8.2"
+        "barryvdh/laravel-cors": "^0.8.2",
+        "facebook/graph-sdk" : "~5.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
