--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/socialite": "^2.0",
         "tymon/jwt-auth": "^1.0@dev",
         "barryvdh/laravel-cors": "^0.8.2",
-        "facebook/graph-sdk" : "~5.0"
+        "facebook/graph-sdk" : "~5.0",
+        "illuminate/mail": "^5.3",
+        "nordsoftware/lumen-sparkpost": "^0.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
