--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ APP_TIMEZONE=Asia/Manila
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=esched_db
+DB_DATABASE=esched
 DB_USERNAME=root
-DB_PASSWORD=mysql
+DB_PASSWORD=
 
 CACHE_DRIVER=array
 QUEUE_DRIVER=sync
