Fix meeting index function

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_TIMEZONE=Asia/Manila
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=esched
+DB_DATABASE=esched_new
 DB_USERNAME=root
 DB_PASSWORD=
 
